# ChangeLog for games-strategy/freeorion
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-strategy/freeorion/ChangeLog,v 1.8 2013/10/01 20:25:12 tomka Exp $

  01 Oct 2013; Thomas Kahle <tomka@gentoo.org> freeorion-0.4.3.ebuild:
  Fix missing dependency on dev-games/ois (bug 486700

  19 Sep 2013; Julian Ospald <hasufell@gentoo.org> freeorion-0.4.3.ebuild:
  fix PYTHON_COMPAT

*freeorion-0.4.3 (16 Sep 2013)

  16 Sep 2013; Thomas Kahle <tomka@gentoo.org> +freeorion-0.4.3.ebuild,
  -freeorion-0.4.2_pre20121225.ebuild:
  bump to 0.4.3, remove old

*freeorion-0.4.3_pre20130312 (12 Mar 2013)

  12 Mar 2013; Thomas Kahle <tomka@gentoo.org>
  +freeorion-0.4.3_pre20130312.ebuild, -freeorion-0.4.2_pre20120910-r1.ebuild,
  -freeorion-0.4.2_pre20120910.ebuild:
  bump, remove old

  07 Feb 2013; Ulrich Müller <ulm@gentoo.org>
  freeorion-0.4.2_pre20120910.ebuild, freeorion-0.4.2_pre20120910-r1.ebuild,
  freeorion-0.4.2_pre20121225.ebuild:
  Move Creative Commons licenses to shorter names.

*freeorion-0.4.2_pre20121225 (25 Dec 2012)

  25 Dec 2012; Thomas Kahle <tomka@gentoo.org>
  +freeorion-0.4.2_pre20121225.ebuild:
  bump

*freeorion-0.4.2_pre20120910-r1 (16 Sep 2012)

  16 Sep 2012; Thomas Kahle <tomka@gentoo.org>
  +freeorion-0.4.2_pre20120910-r1.ebuild:
  Fix bugs 434954, 434996. Thanks hasufell

*freeorion-0.4.2_pre20120910 (11 Sep 2012)

  11 Sep 2012; Thomas Kahle <tomka@gentoo.org>
  +freeorion-0.4.2_pre20120910.ebuild, +metadata.xml:
  Bump to recent svn and import to main tree (Bug 402019)

  05 May 2012; Mike Gilbert <floppym@gentoo.org> freeorion-0.3.17_p4823.ebuild:
  Use pkgconfig virtual.

  23 Apr 2012; hasufell <julian.ospald@googlemail.com>
  freeorion-0.3.17_p4823.ebuild:
  fix dep

*freeorion-0.3.17_p4823 (23 Apr 2012)

  23 Apr 2012; hasufell <julian.ospald@googlemail.com>
  +freeorion-0.3.17_p4823.ebuild, +metadata.xml:
  New Ebuild for bug 402019 thanks to all