@@ -2,15 +2,13 @@
 Hash: SHA256
 
 DIST freeorion-0.4.3.tar.bz2 171281552 SHA256 f0a61a42ba09ed2c8b453b734af7320582f8711913b741c5f9d86cad214bf7cf SHA512 87a73c97af14c0c81cfa19023aec410dd785988cab1edafb0e696305e6203fb431faddcc6ca2c4040e5ef0e8a228c2fda6ccf0f0ef93b47aa48ccd0758ecbe02 WHIRLPOOL 1761c2bf6d67fc93bb8e15b60c2dc23b1145e3d101fb1fde85996f94b83875a57d0c7e518e7b404a6d2098d6909feb8458b2630b6d6415c48fd6cc709165d9df
-DIST freeorion-0.4.3_pre20130312.tar.bz2 171010452 SHA256 a6aea2fde48d55ac902ca359bdeff316d03645954d08d4febd59dd483e74a06b SHA512 4811803b0085d5b4ad8d2fe2aaa272e678ad3506e03f1130f93b40c9de1dd75abe32b89de28368e290333a1105f6f86ac82d1a936fb641f34578b465fc21a252 WHIRLPOOL 4b0263b8a9df51ac0a9be5dfda39d457f6783e688cb5bc792fb29b5354abd85e88685d13ea419afe85bc25295a6ed54c90b5f6839b21446f9b70e0bfff293692
-EBUILD freeorion-0.4.3.ebuild 2900 SHA256 6104f38cfd4a9bacf33b2f3609c20259780cc238cbff3385e0e4d37e5c4ccb5c SHA512 d877c576b5bac95a847f76b377b3b4340b62a3852f78c1be90326255e4e42aec835878610e2d1f5da88f855e1276db8c676c4bd4bd7aefd04636a742e9b40079 WHIRLPOOL 550e63303a35ca1d9472b708f5619abb8fc69578750955133efc4fb88274288000efb09c0f6789f78c07c8906eb29aea9c41bf76ee95d9c80510c5140d00a95e
-EBUILD freeorion-0.4.3_pre20130312.ebuild 2676 SHA256 09b2cdc3f3bf0d551793f75474a7496186a5c83a6b02dcc028cddbd7759ad17f SHA512 5e2cd323f58a89c33aed84b6f385040a66e9c72921332f3bacd2f0425db353d289daeaa691c6e07c220c07362ffd0300c8017333cd76b551918dde0e02923a79 WHIRLPOOL 61aa97b589d0d990f3d3170b32e5513716f44062cb530d6cab8c75c4a8ecf8ed62e0f4af0bbf9b87a161839429747dae5d176b0e98f5a1c0c24a15446325e257
-MISC ChangeLog 1969 SHA256 8b4bdcdc4a29a6c87b242d4c2f92ed9e6d1314d4c440bb9adefa48c0f574dc59 SHA512 f3eac205bd1ec3e8f230bb19197590233a9b0c199bc7e6fa6c5f0ca7c43ef86c06ee3ac525de8edd959f2937e5f0d50c5a073adbcf324f0c74471272392895a6 WHIRLPOOL d8b39101e862b27f6f8d5d59b8401f161dda7ca9abdc0c760a35533b8512a1af1bfde0bdfecf424c2bcc5fd122befee712e6770099a9fb5b5cfa618ef25fd949
+EBUILD freeorion-0.4.3.ebuild 2977 SHA256 5e66c10f876ee91e40eb8a4f07067c6c6a8add9aefee73baae6a5f70c43d01a1 SHA512 f8731de6b65c51555586053ff17a19b7f26a27da5ff661628b5f85304d94a703d4e5e307ee9d92f3cb03b9724f5321371af17d00ef82b5cd42166f9ffdb3479a WHIRLPOOL 1db2e2c18bc1b00f9b1827f4820958da32c0e88bc5ec94b99d30577298562656cfcb86ad177fe7ba0925b18a840f4e19839587f0bc1040237d045ea665930718
+MISC ChangeLog 2166 SHA256 493d8ed17e05e86e526c1b2a63c04bbe779e41a190064bea9c33c862411104f1 SHA512 ac40a5877abdb0d75f16fe2446e71751bc70c855b0512c6cdfd067292392e45b9a66670cbea06c916a5ad5453c320653056810a26bf2909e7f83a702acfab5f2 WHIRLPOOL 542280d60c0f04fff8aded1aa65403e0729ef8e6801df7a595c1c15f99243aa134abc40df50f6e7b5bd3b87bb680b9bf28ebf0b60596d90f0bb89d6a75789cf5
 MISC metadata.xml 657 SHA256 31922a4a89499c885b776d17fe427833212e76d80e78755fd202d252ee9120e4 SHA512 a00342cfa84144df06cc461da147a1211c79c6421a65dfe748e2c4ac30f4deab05eb96dc4843d2b6eb814e5df567adb3907e0e6ad0d4b2f4bf3cf387f92aff92 WHIRLPOOL aa131a7c6bcf66273a7c4d0a3a30a19bbbb135707b67359eb80a2a782b608dba169387dc479a1c72971310211ff75db0b41b9c98e50e2127251f6e088f8486ec
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iF4EAREIAAYFAlJLL9oACgkQid6yGVZcMrzs3AD/ZqAoLuJLV2XFZZpFIxQl7qpT
-LODyxzx9H9enpGnl5LsBAKnA1wajIfm5YvyejQwblLLWgcWx4PV6IDfr24W4Gy6f
-=T0a0
+iF4EAREIAAYFAlJR3skACgkQid6yGVZcMrzJFAEAjhDKYXCnyE75qi1f76LMem2+
+Cs+WZC5d1mD6E0DjYqoBAMJLsS//BvSg+9Qku6/EGdGsWeCtJ1GZJz5m8bl44ShB
+=ltRf
 -----END PGP SIGNATURE-----
