@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/freeorion/freeorion-0.4.3.ebuild,v 1.3 2013/10/01 20:25:12 tomka Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/freeorion/freeorion-0.4.3.ebuild,v 1.4 2013/10/06 22:05:04 tomka Exp $
 
 EAPI=5
 
@@ -13,7 +13,7 @@ DESCRIPTION="A free turn-based space empire and galactic conquest game"
 HOMEPAGE="http://www.freeorion.org"
 SRC_URI="http://dev.gentoo.org/~tomka/files/${P}.tar.bz2"
 
-LICENSE="GPL-2 CC-BY-SA-3.0"
+LICENSE="GPL-2 LGPL-2.1 CC-BY-SA-3.0"
 SLOT="0"
 KEYWORDS="~amd64"
 IUSE="cg"
@@ -58,6 +58,9 @@ src_prepare() {
 		echo "Plugin=Plugin_CgProgramManager" \
 			>> "${CMAKE_USE_DIR}"/ogre_plugins.cfg || die
 	fi
+
+	# parse subdir sets -O3
+	sed -e "s:-O3::" -i parse/CMakeLists.txt
 
 	# set revision for display in game -- update on bump!
 	sed -i -e 's/???/6281/' CMakeLists.txt
